[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

# Poetry configuration
[tool.poetry]
name = "ssllabsscan"
version = "4.1.0"
description = "SSL Labs Analysis Reporting"
authors = ["Kay Hau <virtualda@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "ssllabsscan"}]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3 :: Only",
]
repository = "https://github.com/kyhau/ssllabs-scan"
homepage = "https://github.com/kyhau/ssllabs-scan"

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
requests = "2.32.3"

[tool.poetry.group.test.dependencies]
pytest = "8.4.0"
pytest-cov = "7.0.0"
pytest-mock = "3.15.0"

[tool.poetry.group.dev.dependencies]
black = "24.10.0"
flake8 = "7.3.0"
yamllint = "1.35.0"

[tool.poetry.scripts]
ssllabs-scan = "ssllabsscan.main:main"

# Pytest configuration
[tool.pytest.ini_options]
testpaths = ["tests"]
norecursedirs = ["env", ".git", "dist", "build", ".venv"]
xfail_strict = true
junit_family = "xunit2"
addopts = "--strict-markers"

# Coverage configuration
[tool.coverage.run]
source = ["ssllabsscan"]
omit = [
    "*/__init__.py",
    "*/tests/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]

[tool.coverage.xml]
output = "coverage.xml"
